--- a/SignUp/src/app/aboutpage/aboutpage.component.html
+++ b/SignUp/src/app/aboutpage/aboutpage.component.html
@@ -1,27 +1,51 @@
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="../dashboard" >Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="../view-task"> View Task </a>
+        </li>
 
-<mat-card>
-        <mat-card-header >
-            <a style="text-decoration: none;  color: rgb(224, 36, 22);"  routerLink="../dashboard"> 
-                <mat-icon></mat-icon>Back To page 
-            </a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="../view-meeting">View Meeting</a>
+        </li>
 
-        </mat-card-header>
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+
     
-</mat-card>
+        <form class="form-inline">
+          <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+          <button class="btn btn-warning" >
+            <li class="nav-item">
+                <a class="nav-link" routerLink="../login">Login</a>
+              </li>
+          </button>
+          
+         
+        </form>
 
-<div class="content" fxLayoutGap="50px grid" >
+      </ul>
+    </div>
+  </nav>
 
-    <mat-card class="content" >
-        <img  class="imgcontent" src="../../assets/blur.jpeg" alt="" >
-        <img  class="imgcontent" src="../../assets/blur.jpeg" alt="" >
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, omnis aspernatur eaque non quod ex dolores voluptatibus libero recusandae animi deserunt aut facilis odio doloremque quia exercitationem corrupti ipsa! Placeat eius, voluptas eaque quod saepe assumenda accusantium recusandae quisquam vitae et minima porro, eligendi ipsa, voluptate architecto earum dolorum? Omnis non amet blanditiis eius, perspiciatis tenetur exercitationem harum incidunt vitae aut ut necessitatibus ipsam est at sed commodi, temporibus quae natus velit, officia reiciendis fugiat facilis. Nulla fugiat numquam aut impedit pariatur necessitatibus nam deserunt, cupiditate placeat quidem! Error quas molestias quia cupiditate ut provident explicabo alias delectus! Omnis vitae itaque animi consequatur iste? Amet similique quisquam expedita molestias sequi itaque doloremque obcaecati officia beatae ea modi, error vitae accusamus aspernatur. Esse aliquam ea, repellat praesentium, rerum delectus exercitationem atque similique dolores aspernatur quam debitis minus! Repellendus quis velit molestiae laboriosam mollitia aspernatur. Rem quis pariatur impedit cum voluptates reprehenderit natus at sed? Voluptas, consequatur error atque sapiente eos ab nostrum. Excepturi perferendis ea error aspernatur sapiente ex illo animi fugiat ullam veniam sunt, minus nesciunt delectus non incidunt dolore reiciendis accusantium necessitatibus nostrum vero voluptatem nihil. Magni officia, iste earum ea iusto architecto itaque voluptatem deleniti at aperiam rem nam sint saepe possimus atque. Nisi tempora sed, doloribus aliquid beatae voluptatum totam, amet fuga voluptas iure suscipit id atque odit et non molestias. Ex, itaque quis delectus placeat animi quaerat obcaecati provident error esse quidem deserunt maiores, dolore beatae eum totam voluptas! Totam rerum soluta obcaecati voluptates temporibus quis distinctio harum, molestiae repellat repudiandae quas error, ea suscipit in incidunt eaque dolorum aut repellendus dignissimos eum at. Inventore corporis itaque molestias quisquam in nostrum mollitia voluptates autem beatae laudantium eaque quibusdam architecto, iste sunt dignissimos quidem enim adipisci id ullam! Id ut quo assumenda minima dolorum quod labore autem iusto placeat provident quos, ipsum nostrum enim quaerat sint expedita. Modi minus, iure amet atque accusamus voluptates placeat tenetur rem repellendus quaerat repudiandae exercitationem ex consequuntur cumque commodi ipsam sit eaque repellat totam debitis quis soluta omnis explicabo deserunt? Odio quod quas optio. Totam, molestias id soluta, ipsum voluptatibus cum asperiores, deserunt placeat qui iure odit fuga earum sunt! Eveniet reprehenderit ea porro fugiat sequi molestiae enim, et in repellat sint deleniti necessitatibus commodi voluptas at eum incidunt distinctio? Dignissimos, molestiae repellendus? Quasi maxime eligendi suscipit perferendis odit tempora repudiandae quidem dolore, iusto, eos aliquid? Harum cumque laborum numquam nam?
-       
-    </mat-card>
-
-
-</div>
   
+<main>
+    <h1 fxLayoutAlign="center center" style="font-weight: bolder; color: aliceblue; " >About Us</h1>
 
- 
-  
+    <div class="div1">
+        
+   <p style="padding: 100px; margin: 10px; color: white; ">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio molestiae quam expedita amet dolorum recusandae eos maxime. Nihil, quia rerum. Atque dolorum nesciunt fugiat est magnam, sed repudiandae maxime aperiam quasi officiis possimus beatae recusandae. Vero quisquam vel eaque at inventore, itaque ullam velit odio aliquid asperiores quos maxime! Fugiat omnis maxime rem delectus animi fugit, eveniet quos, ab excepturi, dolorem ratione incidunt consequuntur dolores illo voluptatum perferendis provident corrupti sequi et aut. Maiores odio in hic aliquid, amet sunt recusandae nesciunt earum eos aspernatur magnam accusamus qui. Deleniti reiciendis, accusamus ipsa illo distinctio doloremque rerum perspiciatis dolore ipsam natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem doloribus praesentium inventore modi sapiente vitae magni possimus placeat esse adipisci quod voluptas, officia, natus neque laborum facere cupiditate? Doloremque, quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+
+    </div>
+
+    <div class="div2">
+        <img src="../../assets/peopleimg.jpeg" style="padding: 100px; margin: 10px; height: 500px;">
+    </div>
+
+</main>
