--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -16,158 +16,9 @@
                             <span style="position:static"> DASHBOARD </span>
                      </mat-toolbar>
 
-                     <!-- <div class="content" fxLayoutGap="15px grid">
+                     <main >
 
-                            <mat-card class="mat-elevation-z4">
-                                   <mat-card-header>
-                                          <mat-card-title> Who Are We ? </mat-card-title>
-                                   </mat-card-header>
-
-                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
-                                          nisi deleniti nesciunt totam iure dolor modi accusamus
-                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
-                                          voluptates deleniti reprehenderit.
-                                   </p>
-
-                                   <mat-card-content>
-                                          <p>
-                                                 Thankyou For Reading.
-                                          </p>
-                                   </mat-card-content>
-                                   <mat-card-actions>
-                                          <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../aboutpage"   >About Us</button>
-                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
-
-                                          </div>
-                                   </mat-card-actions>
-                            </mat-card>
-
-                            <mat-card class="mat-elevation-z4">
-                                   <mat-card-header>
-                                          <mat-card-title> How To Create Task ? </mat-card-title>
-                                   </mat-card-header>
-
-                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
-                                          nisi deleniti nesciunt totam iure dolor modi accusamus
-                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
-                                          voluptates deleniti reprehenderit.</p>
-
-                                   <mat-card-content>
-                                          <p>
-                                                 Thankyou For Reading.
-                                          </p>
-                                   </mat-card-content>
-                                   <mat-card-actions>
-                                          <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-success"
-                                                        style="width : 9em;" routerLink="../create-task-dashboard"  >Create Task</button>
-                                                 <button mat-button class="btn-primary" (click)="fun()" >Like</button>
-
-                                          </div>
-                                   </mat-card-actions>
-                            </mat-card>
-
-
-                            <mat-card class="mat-elevation-z4">
-                                   <mat-card-header>
-                                          <mat-card-title> How To Create Meetings ?</mat-card-title>
-                                   </mat-card-header>
-
-                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
-                                          nisi deleniti nesciunt totam iure dolor modi accusamus
-                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
-                                          voluptates deleniti reprehenderit.</p>
-
-                                   <mat-card-content>
-                                          <p>
-                                                 Thankyou For Reading.
-                                          </p>
-                                   </mat-card-content>
-                                   <mat-card-actions>
-
-                                          <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-warning"
-                                                        style="width : 9em;" routerLink="../login"  >Create Meeting</button>
-                                                 <button mat-button class="btn-primary" (click)="fun()" >Like</button>
-
-                                          </div>
-
-
-                                   </mat-card-actions>
-                            </mat-card>
-
-                     </div>
-
-                     <div class="content" fxLayoutGap="15px grid">
-
-                            <mat-card class="mat-elevation-z4">
-                                   <mat-card-header>
-                                          <mat-card-title> How To View Tasks ?  </mat-card-title>
-                                   </mat-card-header>
-
-                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
-                                          nisi deleniti nesciunt totam iure dolor modi accusamus
-                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
-                                          voluptates deleniti reprehenderit.
-                                   </p>
-
-                                   <mat-card-content>
-                                          <p>
-                                                 Thankyou For Reading.
-                                          </p>
-                                   </mat-card-content>
-                                   <mat-card-actions>
-                                          <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../view-task"  >View Tasks</button>
-                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
-
-                                          </div>
-                                   </mat-card-actions>
-                            </mat-card>
-                            <mat-card class="mat-elevation-z4">
-                                   <mat-card-header>
-                                          <mat-card-title> How To View Meetings ? </mat-card-title>
-                                   </mat-card-header>
-
-                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
-                                          nisi deleniti nesciunt totam iure dolor modi accusamus
-                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
-                                          voluptates deleniti reprehenderit.
-                                   </p>
-
-                                   <mat-card-content>
-                                          <p>
-                                                 Thankyou For Reading.
-                                          </p>
-                                   </mat-card-content>
-                                   <mat-card-actions>
-                                          <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
-                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
-
-                                          </div>
-                                   </mat-card-actions>
-                            </mat-card>
-
-               </div> -->
-             
-
-
-               <!-- <mat-card class="mat-elevation-z4">
-                     <mat-card-header>
-                            <mat-card-title> Who Are We ? </mat-card-title>
-                     </mat-card-header> 
-              
-                  </mat-card>-->
-
-
-                     <main>
-
-                            <div class="div1">Box 1
+                            <div class="div1"> <P>HOW TO CREATE TASK ?</P> 
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
 
                             <mat-card-content>
@@ -179,14 +30,14 @@
                             <mat-card-actions>
                                    <div class="text-center">
                                           <button mat-button mat-raised-button class="btn-info"
-                                                 style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                           style="width : 9em;" routerLink="../create-task-dashboard">create-task </button>
                                           <button mat-button class="btn-primary" (click)="fun()">Like</button>
 
                                    </div>
                             </mat-card-actions>
 
                             </div>
-                            <div class="div2">Box 2
+                            <div class="div2"> <P>HOW TO CREATE MEETINGS?</P> 
                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
                                    <mat-card-content>
                                           <p>
@@ -197,13 +48,13 @@
                                    <mat-card-actions>
                                           <div class="text-center">
                                                  <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                        style="width : 9em;" routerLink="../create-meeting-dashboard">create-meeting</button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
        
                                           </div>
                                    </mat-card-actions>
                             </div>
-                            <div class="div3">Box 3
+                            <div class="div3"> <P>HOW TO VIEW TASK?</P> 
                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
 
                                    <mat-card-content>
@@ -215,14 +66,14 @@
                                    <mat-card-actions>
                                           <div class="text-center">
                                                  <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                        style="width : 9em;" routerLink="../view-task"  >view-task</button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
        
                                           </div>
                                    </mat-card-actions>
 
                             </div>
-                            <div class="div4">Box 4
+                            <div class="div4"> <P>HOW TO VIEW MEETINGS?</P> 
                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
 
                                    <mat-card-content>
@@ -234,7 +85,7 @@
                                    <mat-card-actions>
                                           <div class="text-center">
                                                  <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                        style="width : 9em;" routerLink="../view-meeting">view-meeting </button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
        
                                           </div>
@@ -243,10 +94,7 @@
                             </div>
 
                      </main>
-           
-
-
-
+                     
               </router-outlet>
 
        </mat-drawer-content>
