--- a/SignUp/src/app/signup/signup.component.html
+++ b/SignUp/src/app/signup/signup.component.html
@@ -9,13 +9,13 @@
     <form (ngSubmit)="onSubmit()" fxLayoutAlign="stretch" fxLayout="column" class="mytask">
 
       <mat-form-field appearance="fill">
-        <mat-label>Username</mat-label>
-        <input [(ngModel)]="user.username" name = "username" matInput type="text" placeholder="Enter-Name" >
+        <mat-label>Enter Full Name</mat-label>
+        <input [(ngModel)]="user.firstName" name = "firstName" matInput type="text" placeholder="Enter-Name" >
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>User Email-id </mat-label>
-        <input [(ngModel)]="user.email" name = "email" matInput type="email" placeholder="Enter-Id" >
+        <input [(ngModel)]="user.username" name = "username" matInput type="email" placeholder="Enter-Id" >
       </mat-form-field>
 
       <mat-form-field appearance="fill">
