change about css

--- a/SignUp/src/app/aboutpage/aboutpage.component.css
+++ b/SignUp/src/app/aboutpage/aboutpage.component.css
@@ -1,9 +1,10 @@
 
-.form-inline.ng-untouched.ng-pristine.ng-valid {
+.form-inline{
     display: flex;
     position: absolute;
     left: 93vw;
 }
+
 
 button{
 
