--- a/SignUp/src/app/add-people/add-people.component.css
+++ b/SignUp/src/app/add-people/add-people.component.css
@@ -62,3 +62,12 @@
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+  .icon-logo{
+    margin-left: 12px;
+    font-size: 30px;
+  }
+  .fullName{
+    font-size: 17px;
+    font-weight: bold;
+
+  }
